// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Task rendering render with minimal Props 1`] = `
<Col
  bsClass="col"
  componentClass="div"
  xs={12}
>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsSize="small"
    bsStyle="default"
    className="reload-button"
    disabled={false}
    onClick={[MockFunction]}
  >
    <span
      className="glyphicon glyphicon-refresh "
    />
    Start  auto-reloading
  </Button>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsSize="small"
    bsStyle="default"
    className="dynflow-button"
    disabled={true}
    href="/foreman_tasks/dynflow/"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span
      data-original-title="dynflow_enable_console Setting is off"
      title="dynflow_enable_console Setting is off"
    >
      Dynflow console
    </span>
  </Button>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsSize="small"
    bsStyle="default"
    className="resume-button"
    data-original-title="You do not have permission"
    disabled={true}
    onClick={[Function]}
    title="You do not have permission"
  >
    Resume
  </Button>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsSize="small"
    bsStyle="default"
    className="cancel-button"
    data-original-title="You do not have permission"
    disabled={true}
    onClick={[Function]}
    title="You do not have permission"
  >
    Cancel
  </Button>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsSize="small"
    bsStyle="default"
    className="unlock-button"
    data-original-title="You do not have permission"
    disabled={true}
    onClick={[MockFunction]}
    title="You do not have permission"
  >
    Unlock
  </Button>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsSize="small"
    bsStyle="default"
    className="force-unlock-button"
    data-original-title="You do not have permission"
    disabled={true}
    onClick={[MockFunction]}
    title="You do not have permission"
  >
    Force Unlock
  </Button>
</Col>
`;

exports[`Task rendering render with some Props 1`] = `
<Col
  bsClass="col"
  componentClass="div"
  xs={12}
>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsSize="small"
    bsStyle="default"
    className="reload-button"
    disabled={false}
    onClick={[MockFunction]}
  >
    <span
      className="glyphicon glyphicon-refresh spin"
    />
    Stop  auto-reloading
  </Button>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsSize="small"
    bsStyle="default"
    className="dynflow-button"
    disabled={false}
    href="/foreman_tasks/dynflow/"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span>
      Dynflow console
    </span>
  </Button>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsSize="small"
    bsStyle="default"
    className="resume-button"
    disabled={true}
    onClick={[Function]}
  >
    Resume
  </Button>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsSize="small"
    bsStyle="default"
    className="cancel-button"
    disabled={true}
    onClick={[Function]}
  >
    Cancel
  </Button>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsSize="small"
    bsStyle="default"
    className="parent-button"
    disabled={false}
    href="/foreman_tasks/tasks/parent-id"
  >
    Parent task
  </Button>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsSize="small"
    bsStyle="default"
    className="subtask-button"
    disabled={false}
    href="/foreman_tasks/tasks/test/sub_tasks"
  >
    Sub tasks
  </Button>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsSize="small"
    bsStyle="default"
    className="unlock-button"
    disabled={false}
    onClick={[MockFunction]}
  >
    Unlock
  </Button>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsSize="small"
    bsStyle="default"
    className="force-unlock-button"
    disabled={false}
    onClick={[MockFunction]}
  >
    Force Unlock
  </Button>
</Col>
`;
